# template_mujoco

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: template.hpp
libraries/: README.md
src/: template.cpp
